# sr2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.homelab  LICENSE  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PLAN-claude-code-provider.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  TESTING.md  bridge-test.yaml  docker-compose.claude-code.yaml  docker-compose.homelab.yaml  docker-compose.nvidia.yaml  docker-compose.test.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/: README.md  coherence.py  cost.py  token_savings.py
configs/: defaults.yaml  minimal.yaml
docs/: architecture.md  configuration.md  getting-started.md  guide-a2a.md  guide-bridge.md  guide-circuit-breakers.md  guide-compaction.md  guide-custom-resolvers.md  guide-eval-harness.md  guide-heartbeats.md  guide-memory.md  guide-plugins.md  guide-tool-masking.md  index.md  observability.md  pro.md  reference.md  troubleshooting.md
docs/smoke/: spc-72.md
examples/: 01_minimal_pipeline.py  02_multi_turn.py  03_memory.py  04_tool_masking.py  README.md
o11y/: prometheus.yaml
src/: schema_gen.py
testing/: PHASE_1_FINDINGS.md  phase-1-REPORT.md  phase-2-GUIDE.md
tests/: conftest.py  test_active_frame_provider.py  test_cli.py  test_dependencies_extras.py  test_dependencies_typed_fields.py  test_memory_extraction.py  test_memory_optional_psycopg.py  test_memory_protocol.py  test_memory_schema.py  test_memory_store.py  test_orchestrator.py  test_orchestrator_provenance.py  test_orchestrator_registry.py  test_orchestrator_transformers.py  test_pg_memory_store.py  test_public_api.py  test_scaffolding.py  test_seed_encapsulation.py  test_seed_session.py  test_seedable_protocol.py  test_sr2_14_ocp_llm_dict.py  test_sr2_facade.py  test_stream_event_error.py  test_tool_provider.py
(+491 files in other folders)
