[project]
name = "sr2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Diego Camizotti", email = "diego@terminuslabs.co" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "aiosqlite>=0.22.1",
    "python-ulid>=3.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
sr2 = "sr2.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.25.0", "ruff>=0.15.11"]
