[project]
name = "sr2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Diego Camizotti", email = "diego@terminuslabs.co" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "aiosqlite>=0.22.1",
    "python-ulid>=3.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
sr2 = "sr2.cli:main"

[project.entry-points."sr2.resolvers"]
static = "sr2.pipeline.resolvers.static:StaticResolver"
input = "sr2.pipeline.resolvers.input:InputResolver"
session = "sr2.pipeline.resolvers.session:SessionResolver"
event_payload = "sr2.pipeline.resolvers.event_payload:EventPayloadResolver"

[project.entry-points."sr2.transformers"]
summarize = "sr2.pipeline.transformers.summarization:SummarizationTransformer"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.25.0", "ruff>=0.15.11"]
